--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -158,6 +158,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##2. Convolutional Neural Network\n",
+        "\n",
+        "The model consists of the following components:\n",
+        "\n",
+        "Input Layer: Accepts 3-channel (RGB) images as input.\n",
+        "\n",
+        "Convolutional Layers: The network starts with a convolutional layer followed by batch normalization. Then, a configurable number of additional convolutional layers are added, each followed by batch normalization and a ReLU activation function. These layers capture hierarchical features from the input images.\n",
+        "\n",
+        "Max Pooling: After each convolutional layer, max pooling is performed to downsample the feature maps, reducing their spatial dimensions.\n",
+        "\n",
+        "Flattening: The feature maps are flattened into a 1D vector to be processed by the fully connected layers.\n",
+        "\n",
+        "Fully Connected Layers: A single fully connected layer is added, which takes the flattened feature vector as input. The output size of this layer is determined by the number of target classes (in this case, 10 classes). The fully connected layer is followed by a softmax activation function to obtain class probabilities."
+      ],
+      "metadata": {
+        "id": "yfzPy14pc2Zy"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
