--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -153,15 +153,15 @@
         "\n",
         "The model consists of the following components:\n",
         "\n",
-        "Input Layer: Accepts 3-channel (RGB) images as input.\n",
+        "`Input Layer`: Accepts 3-channel (RGB) images as input.\n",
         "\n",
-        "Convolutional Layers: The network starts with a convolutional layer followed by batch normalization. Then, a configurable number of additional convolutional layers are added, each followed by batch normalization and a ReLU activation function. These layers capture hierarchical features from the input images.\n",
+        "`Convolutional Layers`: The network starts with a [convolutional layer](https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html) followed by [batch normalization](https://pytorch.org/docs/stable/generated/torch.nn.BatchNorm2d.html). Then, a configurable number of additional convolutional layers are added, each followed by batch normalization and a [ReLU](https://pytorch.org/docs/stable/generated/torch.nn.ReLU.html?highlight=relu) activation function. These layers capture hierarchical features from the input images.\n",
         "\n",
-        "Max Pooling: After each convolutional layer, max pooling is performed to downsample the feature maps, reducing their spatial dimensions.\n",
+        "`Max Pooling`: After each convolutional layer, [max pooling](https://pytorch.org/docs/stable/generated/torch.nn.MaxPool2d.html) is performed to downsample the feature maps, reducing their spatial dimensions.\n",
         "\n",
-        "Flattening: The feature maps are flattened into a 1D vector to be processed by the fully connected layers.\n",
+        "`Flattening`: The feature maps are flattened into a 1D vector to be processed by the fully connected layers.\n",
         "\n",
-        "Fully Connected Layers: A single fully connected layer is added, which takes the flattened feature vector as input. The output size of this layer is determined by the number of target classes (in this case, 10 classes). The fully connected layer is followed by a softmax activation function to obtain class probabilities."
+        "`Fully Connected Layers`: A single [fully connected layer](https://pytorch.org/docs/stable/generated/torch.nn.Linear.html) is added, which takes the flattened feature vector as input. The output size of this layer is determined by the number of target classes (in this case, 10 classes). The fully connected layer is followed by a [softmax](https://pytorch.org/docs/stable/generated/torch.nn.Softmax.html?highlight=softmax) activation function to obtain class probabilities."
       ]
     },
     {
@@ -308,18 +308,18 @@
       "source": [
         "### Accuracy Calculation\n",
         "\n",
-        "INPUTS:\n",
+        "`INPUTS`:\n",
         "         \n",
         "\n",
         "*   Output have shape of [batch_size, category_count]\n",
         "*   Target in the shape of [batch_size] * there is only one true class for each sample.\n",
         "*   Topk is tuple of classes to be included in the precision. Topk have to a tuple so if you are giving one number.\n",
         "\n",
-        "FUNCTION:\n",
+        "`FUNCTION`:\n",
         "\n",
         " * The accuracy values are calculated using the formula: correct_predictions / batch_size * 100.0, where correct_predictions is the number of correctly predicted samples for the given topk.\n",
         "\n",
-        "OUTPUTS:\n",
+        "`OUTPUTS`:\n",
         "\n",
         "\n",
         "*   The function returns a list of accuracy values corresponding to the specified topk values. Each accuracy value is a tensor and represents the percentage of correct predictions for the given topk. The length of the output list is equal to the length of the topk tuple.\n",
