--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -24,7 +24,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "vfyw_Gm72cuE"
@@ -177,18 +176,15 @@
         "\n",
         "The model consists of the following components:\n",
         "\n",
-        "Input Layer: Accepts 3-channel (RGB) images as input.\n",
+        "`Input Layer`: Accepts 3-channel (RGB) images as input.\n",
         "\n",
-        "[Conv2d](https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html):\n",
-        "**Descripción sencilla de en que consiste el Conv2d layer**\n",
+        "`Convolutional Layers`: The network starts with a convolutional layer called [Conv2d](https://pytorch.org/docs/stable/generated/torch.nn.Conv2d.html) followed by [batch normalization](https://pytorch.org/docs/stable/generated/torch.nn.BatchNorm2d.html). Then, a configurable number of additional convolutional layers are added, each followed by batch normalization and a [ReLU](https://pytorch.org/docs/stable/generated/torch.nn.ReLU.html?highlight=relu) activation function. These layers capture hierarchical features from the input images.\n",
         "\n",
-        "The network starts with a convolutional layer followed by batch normalization. Then, a configurable number of additional convolutional layers are added, each followed by batch normalization and a ReLU activation function. These layers capture hierarchical features from the input images.\n",
+        "`Max Pooling`: After each convolutional layer, [max pooling](https://pytorch.org/docs/stable/generated/torch.nn.MaxPool2d.html) is performed to downsample the feature maps, reducing their spatial dimensions.\n",
         "\n",
-        "Max Pooling: After each convolutional layer, max pooling is performed to downsample the feature maps, reducing their spatial dimensions.\n",
+        "`Flattening`: The feature maps are flattened into a 1D vector to be processed by the fully connected layers.\n",
         "\n",
-        "Flattening: The feature maps are flattened into a 1D vector to be processed by the fully connected layers.\n",
-        "\n",
-        "Fully Connected Layers: A single fully connected layer is added, which takes the flattened feature vector as input. The output size of this layer is determined by the number of target classes (in this case, 10 classes). The fully connected layer is followed by a softmax activation function to obtain class probabilities."
+        "`Fully Connected Layers`: A single [fully connected layer](https://pytorch.org/docs/stable/generated/torch.nn.Linear.html) is added, which takes the flattened feature vector as input. The output size of this layer is determined by the number of target classes (in this case, 10 classes). The fully connected layer is followed by a [softmax](https://pytorch.org/docs/stable/generated/torch.nn.Softmax.html?highlight=softmax) activation function to obtain class probabilities."
       ]
     },
     {
