Loop_reference_image

--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -451,6 +451,33 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for epoch in range(epochs):\n",
+        "\n",
+        "    #Put model in training mode (this is the default state of a model)\n",
+        "    model.train()\n",
+        "\n",
+        "    #1. Forward pass on train data using the forward() method inside\n",
+        "    output = model(image)\n",
+        "\n",
+        "    #2 Calculate the loss (how different are the model's predictions the true values)\n",
+        "    loss = criterion(output, label)\n",
+        "\n",
+        "    #3 Zero the gradients of the optimizer (they accumulate by default)\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    #4 Perform backpropagation on the loss\n",
+        "    scaler.scale(loss).backward()\n",
+        "\n",
+        "    #5 Progress/step the optimizer (gradient descent)\n",
+        "    scales.step(optimizer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "zN1TRsD5BpiV"
       },
