--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -472,7 +472,7 @@
         "    scaler.scale(loss).backward()\n",
         "\n",
         "    #5 Progress/step the optimizer (gradient descent)\n",
-        "    scales.step(optimizer)"
+        "    scaler.step(optimizer)"
       ]
     },
     {
