Correnction train loop

--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -469,10 +469,10 @@
         "    optimizer.zero_grad()\n",
         "\n",
         "    #4 Perform backpropagation on the loss\n",
-        "    scaler.scale(loss).backward()\n",
+        "    loss.backward()\n",
         "\n",
         "    #5 Progress/step the optimizer (gradient descent)\n",
-        "    scaler.step(optimizer)"
+        "    optimizer.step()"
       ]
     },
     {
