add batch-size info

--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -335,7 +335,7 @@
         "\n",
         "\n",
         "\n",
-        "<div align=\"center\" style=\"width=80px\"><img src=\"https://neurohive.io/wp-content/uploads/2018/11/vgg16-1-e1542731207177.png\" ></div>\n",
+        "<div align=\"center\"><img src=\"https://neurohive.io/wp-content/uploads/2018/11/vgg16-1-e1542731207177.png\" width=\"700\"></div>\n",
         "\n",
         "\n",
         "The hidden layer in model can be different types of linear and non-linear mathematical functions, in the case of the proposed architecture, the model consists of the following components:\n",
@@ -871,7 +871,34 @@
         "id": "LYsOwGIrzC3U"
       },
       "source": [
-        "### batch tuning"
+        "### **Batch-size**\n",
+        "\n",
+        "\n",
+        "The batch size determines **how many examples are used** together before adjusting the model. Experiments show that using a bigger batch often makes the model perform worse in terms of its ability to understand new things. Picking the right batch size involves carefully finding a balance between how training works and how well the model does. When the batch size gets larger, it can make training more steady and use the computer's power better. However, this might also make the model not as good at understanding new samples, which could lead to it fitting too closely to the training data and not being able to find new patterns in new data.\n",
+        "\n",
+        "<div align=\"center\"><img src=\"https://editor.analyticsvidhya.com/uploads/58182variations_comparison.png\" width=\"700\" ></div>\n",
+        "\n",
+        "\n",
+        "\n",
+        "**Low Batch Size**\n",
+        "\n",
+        "* **Erratic Gradients:** Gradients dance unpredictably with sparse data.\n",
+        "\n",
+        "* **Faster Convergence** Early On: An energetic sprint through initial epochs.\n",
+        "\n",
+        "* **Inefficient Hardware Use:** Hardware power underutilized, like a thoroughbred held back.\n",
+        "\n",
+        "**Large Batch Size**\n",
+        "\n",
+        "* **Smooth Gradients**: Gradients glide steadily, painting a smoother optimization path.\n",
+        "\n",
+        "* **Slower Convergence:** A patient marathon, progressing with measured steps.\n",
+        "\n",
+        "* **Memory Efficiency:** Hardware harmonized, orchestrating a symphony of efficient computation.\n",
+        "\n",
+        "* **Potential Overfitting:** The risk of over-memorization lurks in the vast data expanse.\n",
+        "\n",
+        "* **Limited Exploration:** A narrow journey, missing the landscapes of alternative solutions."
       ]
     },
     {
