--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "c_d_XCXc-iNP"
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "NVXzqyvqBpiV"
@@ -191,20 +191,25 @@
         "2. [torchvision.datasets](https://pytorch.org/vision/stable/datasets.html): This submodel within torchvision porvides functions to create and load popular datasets, such as CIFAR-10, MNIST, and ImageNet. (In this notebook is used the CIFAR-10 dataset.)\n",
         "3. [torchvision.transforms](https://pytorch.org/vision/stable/transforms.html) module: This module contains various image transformation functions that help in pre-processing the dataset before feeding it to a neural network.\n",
         "\n",
+        "(optional to explain)\n",
+        "\n",
+        "$$\n",
+        "\\textbf{x}'=\\frac{\\textbf{x}-min(\\textbf{x})}{max(\\textbf{x})-min(\\textbf{x})}\n",
+        "$$\n",
+        "\n",
         "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OE_YNTJqBpiT",
-        "outputId": "d4a98bc8-295b-4be9-cf8c-1a7bb17b1052",
-        "cellView": "form"
+        "outputId": "d4a98bc8-295b-4be9-cf8c-1a7bb17b1052"
       },
       "outputs": [
         {
@@ -275,15 +280,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 312
         },
         "id": "eEIx0AaXBpiU",
-        "outputId": "f3e221e1-093a-4893-d7cb-e113f96448a2",
-        "cellView": "form"
+        "outputId": "f3e221e1-093a-4893-d7cb-e113f96448a2"
       },
       "outputs": [
         {
@@ -381,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "oMLnlXKB4_2H"
       },
@@ -433,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "YOMiFVVtBpiV"
       },
@@ -472,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "AcgzFBRfBpiV"
       },
@@ -483,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "S-6MhQxpBpiV",
         "cellView": "form"
@@ -536,7 +540,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "zN1TRsD5BpiV"
       },
@@ -654,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "b6B072iA8z7q"
       },
@@ -665,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "LIWYPaY0BpiW"
       },
@@ -678,7 +682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -732,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -786,7 +790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -817,7 +821,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "F2f_LGcKejRN",
         "cellView": "form"
@@ -904,7 +908,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1024,7 +1028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1122,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1161,7 +1165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1262,7 +1266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "vlKaQgt_w-XO"
       },
@@ -1281,7 +1285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1348,7 +1352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
