--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -16,12 +16,12 @@
         "Throughout this notebook, we will discover how to take full advantage of PyTorch's capabilities to build, train and evaluate our image classification model. From data preparation to implementing optimization techniques, we will explore the essential fundamentals so that you can develop your skills in the exciting field of machine learning with PyTorch. This notebook follows a basic machine learning workflow\n",
         "\n",
         "### Index\n",
-        "1. Data Loading: CIFAR10\n",
-        "2. Data Visualization\n",
-        "2. Define a Convolutional Neural Network\n",
-        "3. Define a loss function\n",
-        "4. Train the network on the training data\n",
-        "5. Test the network on the test data\n"
+        "1. Data structure in Pytorch: Tensors \n",
+        "2. Data Loading and Visualization: CIFAR10\n",
+        "3. Define a Convolutional Neural Network\n",
+        "4. Define a loss function\n",
+        "5. Train the network on the training data\n",
+        "6. Test the network on the test data\n"
       ]
     },
     {
