optimizer size-model documentation added

--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -1283,7 +1283,24 @@
         "id": "4-Nhs9Z4zI1l"
       },
       "source": [
-        "### learning rate tuning"
+        "### learning rate tuning\n",
+        "\n",
+        "The learning rate is a hyperparameter that controls how quickly the model learns and adapts to the problem during training. Choosing the right learning rate is important for making sure the model converges efficiently to an optimal solution.\n",
+        "\n",
+        "<div align=\"center\"><img src=\"https://i.imgur.com/1ZPQw1l.png\" width=\"700\" ></div>\n",
+        "\n",
+        "\n",
+        "- **Low Learning Rate**\n",
+        "    - Training progresses very slowly\n",
+        "    - Loss function decreases gently\n",
+        "    - Model may get stuck in suboptimal solution\n",
+        "\n",
+        "- **High Learning Rate** \n",
+        "    - Training may diverge and become unstable\n",
+        "    - Loss function oscillates and diverges\n",
+        "    - Model struggles to converge to optimal solution\n",
+        "    \n",
+        "The ideal learning rate is problem-specific and depends on factors like the neural network architecture, complexity of the problem, and size of the dataset. It is common practice to gradually decrease the learning rate as training progresses to allow for more fine-tuned learning in later epochs.\n"
       ]
     },
     {
@@ -1521,7 +1538,37 @@
         "id": "9QbfyToTRqg6"
       },
       "source": [
-        "## model size comparison"
+        "## model size comparison\n",
+        "\n",
+        "Choosing the right model size involves tradeoffs between computational resources and model performance. Larger models tend to have higher capacity but are more resource intensive to train.\n",
+        "\n",
+        "\n",
+        "\n",
+        "<div align=\"center\"><img src=\"https://www.researchgate.net/profile/Brian-Davison/publication/339139382/figure/fig2/AS:856873737674754@1581306027943/Top-1-accuracy-versus-network-size-and-parameters-D201-Densenet201-Iv3-Inceptionv3.ppm\" width=\"400\" ></div>\n",
+        "\n",
+        "\n",
+        "- **Tiny Model**\n",
+        "    - Very low computational requirements\n",
+        "    - Lower model capacity \n",
+        "    - May struggle to fit complex patterns\n",
+        "\n",
+        "- **Small Model**\n",
+        "    - Low computational requirements\n",
+        "    - Reasonable model capacity\n",
+        "    - Can fit moderately complex patterns\n",
+        "\n",
+        "- **Medium Model**\n",
+        "    - Moderate computational requirements\n",
+        "    - Good model capacity\n",
+        "    - Can fit more complex patterns \n",
+        "\n",
+        "- **Large Model**\n",
+        "    - High computational requirements\n",
+        "    - Very high model capacity\n",
+        "    - Can fit extremely complex patterns\n",
+        "    - Risk of overfitting due to high capacity\n",
+        "\n",
+        "The optimal model size depends on the problem complexity, amount of training data, and available computational resources. Smaller models train faster while larger models can fit more intricate patterns. The model size should be chosen to provide a good balance."
       ]
     },
     {
