--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "c_d_XCXc-iNP"
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "NVXzqyvqBpiV"
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "lnb3BZUq_3dG",
         "outputId": "6f9dbb44-7072-4b7e-ce13-d39a3da8cf87",
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "xcBL8pQf_3dG",
         "outputId": "ed40797f-6e35-447d-e14d-5e79b4834c83",
@@ -332,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "wvxAtkxA_3dH",
         "outputId": "fbdbe2b3-7ad4-42a6-f07e-8d8b485e8bbe",
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "BCvMVTQq_3dH",
         "outputId": "609f4c2a-3957-4712-f94c-a31fc044614e",
@@ -423,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "u8Zqrpr0_3dI",
         "outputId": "97336863-c0ff-4633-a0a6-c69c6874b385",
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "qlucoEjd_3dI",
         "outputId": "d54149f9-77d7-4ee5-b323-d1a7d565bcb1",
@@ -489,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "Uxt4xP3b_3dI",
         "outputId": "a6f12a3c-053f-47d0-ca7c-584108ff2ff4",
@@ -520,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "iPk4Rc1v_3dI",
@@ -580,7 +580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -643,7 +643,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -748,7 +748,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "oMLnlXKB4_2H"
       },
@@ -800,7 +800,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "YOMiFVVtBpiV"
       },
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "AcgzFBRfBpiV"
       },
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "demMNjjE_3dK"
       },
@@ -912,7 +912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "T96HhXuu_3do",
         "outputId": "d503e3b7-2559-4fcf-a6c6-01653023e58c",
@@ -1133,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "zN1TRsD5BpiV"
       },
@@ -1205,7 +1205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "LIWYPaY0BpiW"
       },
@@ -1223,7 +1223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1305,7 +1305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1403,7 +1403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "F2f_LGcKejRN"
@@ -1490,7 +1490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1627,7 +1627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1745,12 +1745,45 @@
         "id": "QnxISJUpejRU"
       },
       "source": [
-        "### optimizer tuning"
+        "### optimizer tuning\n",
+        "\n",
+        "Optimization refers to the process of adjusting the model's parameters in order to minimize a loss function. The choice of optimization algorithm and its hyperparameters can significantly impact the efficiency and effectiveness of the training process.\n",
+        "\n",
+        "<div align=\"center\"><img src=\"https://api.wandb.ai/files/lavanyashukla/images/projects/36993/2a6f771c.gif\" width=\"450\" ></div>\n",
+        "\n",
+        "- **Faster Optimizer**\n",
+        "    - **Quicker convergence:** Faster optimizers, like Adam, tend to converge more quickly to a solution.\n",
+        "\n",
+        "    - **Adaptive learning rate:** Adaptive optimizers adjust learning rates, allowing them to respond quickly to changes in the loss landscape.\n",
+        "\n",
+        "    - **Risk of overshooting:** Faster optimizers can sometimes overshoot the optimal solution, leading to oscillations around the minimum.\n",
+        "    \n",
+        "    - **Potential overfitting:** Rapid convergence might make the model prone to overfitting, especially if the learning rate is not properly tuned.\n",
+        "\n",
+        "- **Medium-speed Optimizer**\n",
+        "    - **Balanced convergence:** Medium-speed optimizes, like RMSProp, strike a balance between fast and slow convergence.\n",
+        "\n",
+        "    - **Versatility:** Medium-speed optimizers tend to work reasonably well across a variety of tasks and model architectures.\n",
+        "\n",
+        "    - **Sensitivity to hyperparameters:** Medium-speed optimizers might still be sensitive to hyperparameters, particulary the learning rate and decay rates.\n",
+        "\n",
+        "    - **Not always the fastest:** While the avoid the extreme issues of faster optimizers, they migth not always provide the fastest convergence.\n",
+        "\n",
+        "- **Slower Optimizer**\n",
+        "    - **Steady convergence:** Slower optimizers like Stochastic Gradient Descent(SGD) provide more stable and steady convergence.\n",
+        "\n",
+        "    - **Reduced overfitting risk:** Slower convergence allows for smoother adjustments to parameters, reducing te risk of overfitting.\n",
+        "\n",
+        "    - **Requires more time and resources:** Slower optimizers require more iterations to converge, which can be time-consuming, especially for large datasets or complex models.\n",
+        "\n",
+        "    - **Potential to Get Stuck:** Slower optimizers might get stuck in local minima or saddle points for longer periods, especially if the learning rate is too low.\n",
+        "    \n",
+        "The choice of optimizer speed depends on the specific requirements of your task and available resources. If you need fast results and have limited computational resources, a faster optimizer like Adam might be a good choice. For more stable convergence and reduced overfitting risk, a medium-speed optimizer like RMSProp could be appropriate. If you have ample time and computational power, or if you're dealing with a particularly challenging optimization landscape, a slower optimizer like Stochastic Gradient Descend (SGD) might be worth considering."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -1881,7 +1914,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "vlKaQgt_w-XO",
         "outputId": "9f0dd3a9-b89d-4ed7-9807-84888e8c1bff",
