Cost Function Documentation

--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -561,6 +561,8 @@
         "\n",
         "As data is loaded into the algorithms, it breathes life into the machine, granting it the ability to learn, adapt, and transform the world. Each data point represents a valuable piece of knowledge, and every dataset becomes a rich tapestry of information. The challenges of preprocessing and organizing the data are to be approached with determination, for with each step, AI gains the power to revolutionize industries, solve complex problems, and make a profound impact on humanity.\n",
         "\n",
+        "<div align=\"center\"><img src=\"https://media.discordapp.net/attachments/1118652457447325747/1140719490120810636/image.png?width=1025&height=311\" width=\"900\"></div>\n",
+        "\n",
         "Normalization is crucial in data preprocessing for machine learning. By centering data around zero and adjusting its scale, training stability improves, preventing vanishing or exploding gradients. Furthermore, normalization reduces the negative impact of outliers, enhancing effective generalization to new data and preventing overfitting.\n",
         "\n",
         "$$\n",
@@ -827,6 +829,12 @@
       "source": [
         "## 4. **Define cost function**: Categorical Cross-Entropy\n",
         "\n",
+        "The loss function provides an objective measure by evaluating how different the model's predictions are compared to the actual values of the training data. It's worth noting that there are several different types of loss functions tailored for specific tasks and scenarios.\n",
+        "PyTorch, provide a wide range of pre-implemented [loss functions](https://pytorch.org/docs/stable/nn.html#loss-functions), making it convenient for practitioners to choose and apply the most suitable loss function for their specific problem.\n",
+        "In this notebook we will use the [Cross Entropy Loss](https://pytorch.org/docs/stable/generated/torch.nn.CrossEntropyLoss.html#torch.nn.CrossEntropyLoss).\n",
+        "\n",
+        "<div align=\"center\"><img src=\"https://i.imgur.com/jx6lWhe.png\" width=\"600\"></div>\n",
+        "\n",
         "\n",
         "$$\n",
         "\\mathcal{L}_{ce} = - \\sum_{i=1}^C \\textbf{y}_i \\cdot \\log( \\hat{\\textbf{y}_i})\n",
@@ -835,15 +843,6 @@
         "* $C$ is the number of classes\n",
         "* $\\textbf{y}$ is the true label vector\n",
         "* $\\hat{\\textbf{y}}$ is the network prediction, $\\hat{\\textbf{y}} = \\mathcal{M}_\\theta(\\textbf{x})$\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WWGD8BDfF5wP"
-      },
-      "source": [
-        "[Loss functions](https://pytorch.org/docs/stable/nn.html#loss-functions)"
       ]
     },
     {
