--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -716,11 +716,11 @@
         "--------------------\n",
         "\n",
         "\n",
-        "Al definir el una arquitectura de red neural se emplean 3 componentes principales\n",
+        "When defining a neural network architecture, three main components are employed:\n",
         "\n",
-        "* Capa de entrada: El modelo recibe de entrada la imagen $\\textbf{x}$\n",
-        "* Capas ocultas: Diferentes capas lineales y no lineas que extraen caracteristicas de la imagen\n",
-        "* Capa de salida: Funcion de activación para realizar la predición de un tarea especifica (regresion, clasificación) $\\textbf{y}$\n",
+        "* Input layer: The model takes the input image $\\textbf{x}$.\n",
+        "* Hidden layers: Various linear and nonlinear layers that extract features fron the image.\n",
+        "* Output layer: Activation function used to make predictions for a specific task (regression, classification) $\\textbf{y}$.\n",
         "\n",
         "\n",
         "\n",
@@ -831,7 +831,7 @@
         "\n",
         "The loss function provides an objective measure by evaluating how different the model's predictions are compared to the actual values of the training data. It's worth noting that there are several different types of loss functions tailored for specific tasks and scenarios.\n",
         "PyTorch, provide a wide range of pre-implemented [loss functions](https://pytorch.org/docs/stable/nn.html#loss-functions), making it convenient for practitioners to choose and apply the most suitable loss function for their specific problem.\n",
-        "In this notebook we will use the [Cross Entropy Loss](https://pytorch.org/docs/stable/generated/torch.nn.CrossEntropyLoss.html#torch.nn.CrossEntropyLoss).\n",
+        "In this notebook we will use the [Cross Entropy Loss](https://pytorch.org/docs/stable/generated/torch.nn.CrossEntropyLoss.html#torch.nn.CrossEntropyLoss).This loss function calculates the sum of the negative logarithm of predicted probabilities for the true class labels, penalizing larger discrepancies. Lower cross-entropy indicates better model alignment with actual data. It serves as an essential optimization objective during model training..\n",
         "\n",
         "<div align=\"center\"><img src=\"https://i.imgur.com/jx6lWhe.png\" width=\"600\"></div>\n",
         "\n",
@@ -1766,7 +1766,9 @@
         "\n",
         "<div align=\"center\"><img src=\"https://api.wandb.ai/files/lavanyashukla/images/projects/36993/2a6f771c.gif\" width=\"450\" ></div>\n",
         "\n",
-        "**Faster Optimizer**\n",
+        "**Adam**\n",
+        "\\\n",
+        "Adam computes adaptive learning rates per parameter by dividing current gradients by the square root of past squared gradients' moving average. It integrates momentum through an exponential average of previous gradients and updates parameters by subtracting the product of the adaptive learning rate and momentum-adjusted gradient.\n",
         "\n",
         "* **Quicker convergence:** Faster optimizers, like Adam, tend to converge more quickly to a solution.\n",
         "\n",
@@ -1776,27 +1778,50 @@
         "    \n",
         "* **Potential overfitting:** Rapid convergence might make the model prone to overfitting, especially if the learning rate is not properly tuned.\n",
         "\n",
-        "**Medium-speed Optimizer**\n",
+        "\\\n",
         "\n",
-        "* **Balanced convergence:** Medium-speed optimizes, like RMSProp, strike a balance between fast and slow convergence.\n",
+        "**SGD (Stochastic Gradient Descent)**\n",
+        "\\\n",
+        "SGD minimizes loss by calculating gradients on mini-batches and updating parameters using scaled gradients, influenced by a learning rate and optionally, momentum.\n",
         "\n",
-        "* **Versatility:** Medium-speed optimizers tend to work reasonably well across a variety of tasks and model architectures.\n",
+        "* **Simplicity:** SGD is straightforward and computationally efficient, making it easy to implement.\n",
         "\n",
-        "* **Sensitivity to hyperparameters:** Medium-speed optimizers might still be sensitive to hyperparameters, particulary the learning rate and decay rates.\n",
+        "* **Stochastic nature:** Stochasticity allows SGD to escape local minima and ecourages exploration.\n",
         "\n",
-        "* **Not always the fastest:** While the avoid the extreme issues of faster optimizers, they migth not always provide the fastest convergence.\n",
+        "* **Slow convergence:** Without proper tuning, SGD might convergence slowly or oscillate due to sensitivity to learning rates.\n",
         "\n",
-        "**Slower Optimizer**\n",
+        "* **Manual hyperparameter tuning:** Learning rate and momentum need careful adjustment to ensure optimal performance.\n",
         "\n",
-        "* **Steady convergence:** Slower optimizers like Stochastic Gradient Descent(SGD) provide more stable and steady convergence.\n",
+        "\\\n",
         "\n",
-        "* **Reduced overfitting risk:** Slower convergence allows for smoother adjustments to parameters, reducing te risk of overfitting.\n",
+        "**RMSProp (Root Mean Square Propagation)**\n",
+        "\\\n",
+        "RMSProp adjust learning raes per parameter by dividing gradients by the square root of an exponential moving average of past squared gradients. Updates are made using the normalized gradient scaled by a learning rate.\n",
         "\n",
-        "* **Requires more time and resources:** Slower optimizers require more iterations to converge, which can be time-consuming, especially for large datasets or complex models.\n",
+        "* **Adaptive learning rate:** RMSProp adapts learning rates per parameter, helping in the optimization of noisy gradients.\n",
         "\n",
-        "* **Potential to Get Stuck:** Slower optimizers might get stuck in local minima or saddle points for longer periods, especially if the learning rate is too low.\n",
-        "    \n",
-        "The choice of optimizer speed depends on the specific requirements of your task and available resources. If you need fast results and have limited computational resources, a faster optimizer like Adam might be a good choice. For more stable convergence and reduced overfitting risk, a medium-speed optimizer like RMSProp could be appropriate. If you have ample time and computational power, or if you're dealing with a particularly challenging optimization landscape, a slower optimizer like Stochastic Gradient Descend (SGD) might be worth considering."
+        "* **Less sensitive to initial rate:** RMSProp's effectiveness is less influenced by the initial learning rate choice.\n",
+        "\n",
+        "* **Slower convergence:** The absence of high momentum can result in slower convergence compared to some methods.\n",
+        "\n",
+        "* **Hyperparameter tuning:** Parameters like the decay rate need careful tuning for optimal performance.\n",
+        "\n",
+        "\\\n",
+        "\n",
+        "**Adadelta**\n",
+        "\\\n",
+        "Adadelta adapts learning rates via a moving average of past squared gradients and squared paramenters updates. It computes adaptive rates by dividing these moving average's square roots, then updates parameters using the product of this adaptive rate and the normalized gradient.\n",
+        "\n",
+        "* **Adaptive learning rate:** Adadelta adjusts learning rates based on historical gradient insights, helps to the optimization.\n",
+        "\n",
+        "* **No initial learning rate:** Adadelta does not demand an initial learning rate, simplifying parameter tuning.\n",
+        "\n",
+        "* **Slower convergence:** Adadelta might require more iterations to converge compared to faster methods.\n",
+        "\n",
+        "* **Hyperparameter tuning:** Tuning parameters like the decay rate is necessary for optimal performance.\n",
+        "\n",
+        "\\\n",
+        "The choice of optimizer depends on the specific requirements of your task, computational resources, and the characteristics of your data. Each optimizer has its strengths and weaknesses, so experimenting with different options and tuning their hyperparameters can help you find the best fit for optimal training performance."
       ]
     },
     {
