update link image

--- a/classification_pytorch.ipynb
+++ b/classification_pytorch.ipynb
@@ -561,7 +561,7 @@
         "\n",
         "As data is loaded into the algorithms, it breathes life into the machine, granting it the ability to learn, adapt, and transform the world. Each data point represents a valuable piece of knowledge, and every dataset becomes a rich tapestry of information. The challenges of preprocessing and organizing the data are to be approached with determination, for with each step, AI gains the power to revolutionize industries, solve complex problems, and make a profound impact on humanity.\n",
         "\n",
-        "<div align=\"center\"><img src=\"https://media.discordapp.net/attachments/1118652457447325747/1140719490120810636/image.png?width=1025&height=311\" width=\"900\"></div>\n",
+        "<div align=\"center\"><img src=\"https://raw.githubusercontent.com/hdspgroup/pytorch-course/main/datapipeline.png\" width=\"1000\"></div>\n",
         "\n",
         "Normalization is crucial in data preprocessing for machine learning. By centering data around zero and adjusting its scale, training stability improves, preventing vanishing or exploding gradients. Furthermore, normalization reduces the negative impact of outliers, enhancing effective generalization to new data and preventing overfitting.\n",
         "\n",
